[tool.poetry]
name = "dfender"
version = "0.1.0"
description = "Automatic dispatching of pandas functions to distributed dataframes"
authors = ["Ed Andrews"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
multipledispatch = "^0.6.0"
pandas = "^1.5.1"
dask = {extras = ["diagnostics"], version = "^2022.10.2"}
interface-meta = "^1.3.0"
pyarrow = "^10.0.0"
hypothesis = "^6.56.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.5"
black = "^22.10.0"
mypy = "^0.982"
pytest-xdist = "^3.0.2"
pytest-cov = "^4.0.0"
dask = "^2022.10.2"
pyspark = "^3.3.1"
ipykernel = "^6.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
